--- a/app/react/page.mdx
+++ b/app/react/page.mdx
@@ -165,6 +165,7 @@ export default function Header() {
 4. Add code to the header so you see content on the page when you use the component
 
 ```jsx filename="src/Header.jsx" copy
+import { Link } from 'react-router';
 export default function Header() {
     return (
         <header>
@@ -172,7 +173,7 @@ export default function Header() {
             <nav>
                 <ul>
                     <li>
-                        <a href="/">Home</a>
+                        <Link href="/">Home</Link>
                     </li>
                 </ul>
             </nav>
@@ -180,6 +181,10 @@ export default function Header() {
     );
 }
 ```
+> [!CAUTION]
+> 
+> Use the `<Link></Link>{:jsx}` when putting links on your website that will be handled by the Router you will setup.
+
 
 5. Add the component to the app: Go to the `App.jsx` file inside the src folder. You will see the code that displays the two images and other content on the page from before.
 
@@ -298,11 +303,12 @@ alexanderp@Alexander-Macbook ~/Documents/GitHub/itis3135-react>
 
 4. In between the Strict Mode component we will see `<App/>{:jsx}` we need to delete that and replace it with this.
 
-```jsx filename="src/main.jsx"
+```jsx twoslash filename="src/main.jsx" 
 ...
 createRoot(document.getElementById("root")).render(
     <StrictMode>
         <BrowserRouter>
+    
             <Routes></Routes>
         </BrowserRouter>
     </StrictMode>,
